# webserv

./: .gitignore  CMakeLists.txt  JASCHA_CONNECTION_TEMPLATE.cpp  Makefile  README.md  curl_tests.txt  heleens_notes.txt  logs  test.cpp  tmpfiletest.txt  todo.txt  webserv
config/: clion.conf  clion_new.conf  clion_test.conf  main.conf  template.conf  test.conf  tester.conf  tester_clion.conf  vs_code.conf
config/cgi/: cgi.php
config/error_pages/: 403.html  404.html  500.html
html/: about.html  data.txt  hering.html  hollandic_people.html  index.html  login.html  racoon.html  simple_form.html  start.html  startpage.html  startpage_logged.html  template.html
html/cgi/: cat.php  chunked.py  current_time.py  file-upload.py  file_upload.php  file_upload.py  file_upload.sh  hering.py  hering_if_cookie.py  hollandic_people.py  login.py  magic.py  maxwell.php  raccoon.py  start.py  turkmen_khan.py  upload.py
html/cgi/src/: hering.html  hollandic_people.html  logged.html  magic.html  racoon.html  turkmen_khan.html
html/error_pages/: 200.html  204.html  400.html  402.html  404.html  405.html
html/img/: style.css
incl/: CGI.hpp  CLI.hpp  Chunks.hpp  Client.hpp  Config.hpp  ConfigParser.hpp  DELETERequest.hpp  Env.hpp  GETRequest.hpp  POSTRequest.hpp  PUTRequest.hpp  RequestHandler.hpp  RequestParser.hpp  ResponseGenerator.hpp  Server.hpp  Session.hpp  Socket.hpp  defines.hpp  error_handler.hpp  errors.hpp  handleChunks.hpp  main.hpp  reason_phrase.hpp  requestHandler.hpp  requestParser.hpp  request_handler.hpp  tools.hpp
src/: CGI.cpp  CLI.cpp  Chunks.cpp  Client.cpp  Config.cpp  ConfigParser.cpp  DELETERequest.cpp  Env.cpp  GETRequest.cpp  POSTRequest.cpp  PUTRequest.cpp  RequestHandler.cpp  RequestParser.cpp  ResponseGenerator.cpp  Server.cpp  Session.cpp  Socket.cpp  error_handler.cpp  errors.cpp  handleChunks.cpp  main.cpp  reason_phrase.cpp  requestParser.cpp  request_handler.cpp  tools.cpp
src/tools/: signal_handler.cpp  split.cpp  trim.cpp
testers/: Dockerfile  client  client_simulator.cpp  curl_test.sh  log  log.txt  test.pl  tester_config.conf
testers/OwnTesters/: delTest.py
testers/chunked_request_test/: README
testers/stress_test/: README
testers/stress_tester/: Dockerfile
testers/testServerDir/test/: fileUpload.html
